--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+      <img src="/assets/img1.jpg" width="30" height="30" alt="">
     </a>
   </nav>
   <a class="navbar-brand" routerLink="Home"><h3>Scholarship Portal</h3></a>
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="Home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="Home">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="AboutUs">About Us</a>
@@ -36,7 +36,7 @@
     </ul>
   
   </div>
-</nav>
+</nav>  
 
 <!-- <div class="container-fullwidth">  
     
@@ -63,4 +63,5 @@
     </div>  
    </nav>  
 </div>   -->
+
 <router-outlet></router-outlet>
