--- a/src/app/student-home-page/student-home-page.component.html
+++ b/src/app/student-home-page/student-home-page.component.html
@@ -51,19 +51,19 @@
      
         <input type="submit" value="Update" >      
     
-    <br>
+    <br> -->
       
-        <input type="submit" value="logout" (click)="submit4();">      
-    
-        <router-outlet></router-outlet>
+        <!-- <input type="submit" value="logout" (click)="submit4();">      
+     -->
+        <!-- <router-outlet></router-outlet>
     <pre>
         &ensp;
     </pre>
 
 
       <h3>Scholarship Apply Link</h3>
-      <p>Below are the three links to apply for the scheme</p>
-      <ul class="nav nav-pills flex-column">
+      <p>Below are the three links to apply for the scheme</p> -->
+      <!-- <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link" routerLink="" (click)="submit();">POST MATRIC SCHOLARSHIP</a>
         </li>
@@ -74,18 +74,19 @@
           <a class="nav-link" routerLink="" (click)="submit2();">MERIT BASED SCHOLARSHIP</a>
         </li>
       </ul>
-      <hr class="d-sm-none"> -->
+      <hr class="d-sm-none">  -->
+      
     <!-- </div> -->
     
-      <!-- <h2>GUIDELINES</h2>
+       <!-- <h2>GUIDELINES</h2>
       <h5>About the Scholarship</h5>
       <img src="C:\Users\SHEETHAL\Pictures\Scholarships-2.jpg">
       <p>How to Apply?</p>
       <p>Students applying for scholarship for the first time (Fresh Students) need to "Register" on the portal as fresh applicant by providing accurate and authenticated information as printed on their documents in the "Student Registration Form".
 
         The registration form is required to be filled by parents / guardian of students who are below the age of 18 years on the date of registration.</p>
-      <br> -->
-      <!-- <h2>SCHEME DESCRIPTION</h2>
+      <br> 
+       <h2>SCHEME DESCRIPTION</h2>
       <h5>description</h5>
 
       <p>POST MATRIC SCHOLARSHIP</p>
@@ -97,7 +98,7 @@
         <p>Candidates must be an Indian national.
          A minimum of 60% marks Class IX is required. SC, ST and PH candidates will 
         need 55% marks in Class IX.
-         Candidate must be studying in a recognized school in their respective State </p> -->
+         Candidate must be studying in a recognized school in their respective State </p>  -->
     
     
     
@@ -112,3 +113,16 @@
 
 
 <h1>  Student HomePage </h1>
+<ul>
+  <li >
+    <a routerLink="Studentprofile">My Profile</a> 
+   </li>
+  <li >
+   <a routerLink="Scholarship">Schloarship Form</a> 
+  </li>
+  <li >
+    <a routerLink="CheckStudentStatus">Application Status</a> 
+   </li>
+</ul>
+
+<router-outlet></router-outlet>
