--- a/src/app/student-login/student-login.component.html
+++ b/src/app/student-login/student-login.component.html
@@ -1,4 +1,51 @@
-<div class="container" style="padding-top:60px;">  
+
+<!-- <div  style="padding-top:60px;">  
+    <div class="row">  
+      <div class="col-md-6 mx-auto">  
+        <div class="card-group">  
+          <div class="card p-4">  
+            <div class="card-body">  
+              <form name="form" [formGroup]="model" (ngSubmit)="login()" #f="ngForm">   
+                -------<form name="form"  (ngSubmit)="login()" #f="ngForm">    
+                <h1 style="text-align:center">Login</h1>  
+  
+                <div class="input-group mb-3">  
+                  <div class="input-group-prepend">  
+                    <span class="input-group-text"><i class="icon-user"></i></span>  
+                  </div>  
+                  -- <input type="number" name="UserName" [(ngModel)]="model.aadharnumber"  placeholder="Aadhar" formControlName="aadharnumber" required>   --
+                  <input type="number" name="UserName" [(ngModel)]="model.aadharnumber"  placeholder="Aadhar"  required>  
+                </div>  
+                <div class="input-group mb-4">  
+                  <div class="input-group-prepend">  
+                    <span class="input-group-text"><i class="icon-lock"></i></span>  
+                  </div>  
+                  <input  type="password" name="Password" [(ngModel)]="model.password"  
+                 placeholder="Password" >  
+                </div>  
+                <div>  
+                    <p style="color:#E92626;font-size:20px;font-weight:normal" Class="success" >  
+                      {{errorMessage}}  
+                    </p>  
+                  </div>  
+                <div class="row">  
+                  <div class="col-6">  
+                    <button type="submit" class="btn btn-primary px-4">Login</button>  
+                  </div>  
+                  <div class="col-6 text-right">  
+                    <button type="button" class="btn btn-link px-0">Forgot password?</button>  
+                  </div>  
+                </div>  
+  
+              </form>  
+            </div>  
+          </div>  
+        </div>  
+      </div>  
+    </div>  
+  </div>  
+   -->
+   <div class="container" style="padding-top:60px;">  
     <div class="row">  
       <div class="col-md-6 mx-auto">  
         <div class="card-group">  
@@ -11,13 +58,13 @@
                   <div class="input-group-prepend">  
                     <span class="input-group-text"><i class="icon-user"></i></span>  
                   </div>  
-                  <input type="number" name="UserName" [(ngModel)]="model.aadharnumber" class="form-control sty1" placeholder="Aadhar" required>  
+                  <input type="number" name="aadharnumber" [(ngModel)]="model.aadharnumber" class="form-control sty1" placeholder="Aadhar" required>  
                 </div>  
                 <div class="input-group mb-4">  
                   <div class="input-group-prepend">  
                     <span class="input-group-text"><i class="icon-lock"></i></span>  
                   </div>  
-                  <input  type="password" name="Password" [(ngModel)]="model.password" class="form-control"  
+                  <input  type="password" name="password" [(ngModel)]="model.password" class="form-control"  
                  placeholder="Password">  
                 </div>  
                 <div>  
@@ -41,4 +88,3 @@
       </div>  
     </div>  
   </div>  
-  
