--- a/src/app/institute-registration/institute-registration.component.html
+++ b/src/app/institute-registration/institute-registration.component.html
@@ -134,6 +134,7 @@
               Confirm the password
             </div>
         </div>  
+        <a formControlName="statusbyministry"></a>
     <p>       
         <input type="submit" [disabled]="!instituteform.valid" value="Register"/>
         <input type="reset"/>
