--- a/src/app/check-student-status/check-student-status.component.html
+++ b/src/app/check-student-status/check-student-status.component.html
@@ -1,18 +1,18 @@
 
-<h3>Student Scholarship Status</h3><br>
+ <h3>Student Scholarship Status</h3><br>
 
 <table [border]="1" >
     <tr>
-        <td rowspan="2"><b>Status</b></td>
+        <td ><b>Status</b></td>
         <th>Institute</th>
         <th>State</th>
         <th>Ministry</th>
     </tr>
-    <tr>
-        
-        <td>Pending/Approved/Disapproved</td>
-        <td>Pending/Approved/Disapproved</td>
-        <td>Pending/Approved/Disapproved</td>
+    
+    <tr *ngFor="let list of info" >
+        <td>{{list.schlorship}}</td>
+        <td>{{list.statusbyinstitute}}</td>
+        <td>{{list.statusbystate}}</td>
+        <td>{{list.statusbyministry}}</td>
     </tr>
 </table>
-<router-outlet></router-outlet>
