--- a/src/app/state-nodal-officer-login/state-nodal-officer-login.component.html
+++ b/src/app/state-nodal-officer-login/state-nodal-officer-login.component.html
@@ -1,57 +1,46 @@
 
-<meta name="viewport" content="width=device-width, initial-scale=1">  
-<title> Login Page </title>  
-<style>   
-Body {  
-  font-family: Calibri, Helvetica, sans-serif;  
-  background-color: pink;  
-}  
-button {   
-       background-color: #4CAF50;   
-       width: 100%;  
-        color: orange;   
-        padding: 15px;   
-        margin: 10px 0px;   
-        border: none;   
-        cursor: pointer;   
-         }   
- form {   
-        border: 3px solid #f1f1f1;   
-    }   
- input[type=text], input[type=password] {   
-        width: 100%;   
-        margin: 8px 0;  
-        padding: 12px 20px;   
-        display: inline-block;   
-        border: 2px solid green;   
-        box-sizing: border-box;   
-    }  
- button:hover {   
-        opacity: 0.7;   
-    }   
-  .cancelbtn {   
-        width: auto;   
-        padding: 10px 18px;  
-        margin: 10px 5px;  
-    }   
-        
-     
- .container {   
-        padding: 25px;   
-        background-color: lightblue;  
-    }   
-</style>   
-      
-    <h1> State Nodal Officer Login</h1>   
-    <form>  
-        <div class="container">   
-            <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
-            <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
-            <button type="submit" (click)="submit();">Login</button>   
-            <input type="checkbox" checked="checked"> Remember me   
-            <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="#"> password? </a>   
-        </div>   
-    </form>     
+<div class="container" style="padding-top:60px;">  
+    <div class="row">  
+      <div class="col-md-6 mx-auto">  
+        <div class="card-group">  
+          <div class="card p-4">  
+            <div class="card-body">  
+              <form name="form" (ngSubmit)="login()" #f="ngForm">   
+                <h1 style="text-align:center">Login</h1>  
+  
+                <div class="input-group mb-3">  
+                  <div class="input-group-prepend">  
+                    <span class="input-group-text"><i class="icon-user"></i></span>  
+                  </div>  
+                  <input type="text" name="Userid" [(ngModel)]="model.Userid" class="form-control sty1" placeholder="userid" required>  
+                </div>  
+                <div class="input-group mb-4">  
+                  <div class="input-group-prepend">  
+                    <span class="input-group-text"><i class="icon-lock"></i></span>  
+                  </div>  
+                  <input  type="password" name="Password" [(ngModel)]="model.Password" class="form-control"  
+                 placeholder="Password">  
+                </div>  
+                <div>  
+                    <p style="color:#E92626;font-size:20px;font-weight:normal" Class="success" >  
+                      {{errorMessage}}  
+                    </p>  
+                  </div>  
+                <div class="row">  
+                  <div class="col-6">  
+                    <button type="submit" class="btn btn-primary px-4">Login</button>  
+                  </div>  
+                  <div class="col-6 text-right">  
+                    <button type="button" class="btn btn-link px-0">Forgot password?</button>  
+                  </div>  
+                </div>  
+  
+              </form>  
+            </div>  
+          </div>  
+        </div>  
+      </div>  
+    </div>  
+  </div>  
+
+    
