--- a/src/app/student-home-page/student-home-page.component.html
+++ b/src/app/student-home-page/student-home-page.component.html
@@ -51,30 +51,30 @@
      
         <input type="submit" value="Update" >      
     
-    <br> -->
+    <br> 
       
-        <!-- <input type="submit" value="logout" (click)="submit4();">      
+        <input type="submit" value="logout" (click)="submit4();">      
      -->
-        <!-- <router-outlet></router-outlet>
+         <!-- <router-outlet></router-outlet>
     <pre>
         &ensp;
     </pre>
 
 
       <h3>Scholarship Apply Link</h3>
-      <p>Below are the three links to apply for the scheme</p> -->
-      <!-- <ul class="nav nav-pills flex-column">
+      <p>Below are the three links to apply for the scheme</p> 
+       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" routerLink="" (click)="submit();">POST MATRIC SCHOLARSHIP</a>
+          <a class="nav-link" routerLink="Scheme1" (click)="submit();">POST MATRIC SCHOLARSHIP</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="" (click)="submit1();">PRAGATI SCHOLARSHIP</a>
+          <a class="nav-link" routerLink="Scheme2" (click)="submit1();">PRAGATI SCHOLARSHIP</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="" (click)="submit2();">MERIT BASED SCHOLARSHIP</a>
+          <a class="nav-link" routerLink="Scheme3" (click)="submit2();">MERIT BASED SCHOLARSHIP</a>
         </li>
       </ul>
-      <hr class="d-sm-none">  -->
+      <hr class="d-sm-none">   --> -->
       
     <!-- </div> -->
     
@@ -98,8 +98,8 @@
         <p>Candidates must be an Indian national.
          A minimum of 60% marks Class IX is required. SC, ST and PH candidates will 
         need 55% marks in Class IX.
-         Candidate must be studying in a recognized school in their respective State </p>  -->
-    
+         Candidate must be studying in a recognized school in their respective State </p>  
+     -->
     
     
   <!-- </div> -->
@@ -112,7 +112,7 @@
 
 
 
-<h1>  Student HomePage </h1>
+ <h1>  Student HomePage </h1>
 <ul>
   <li >
     <a routerLink="Studentprofile">My Profile</a> 
